@@ -1,3 +1,7 @@
+2009-07-21  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvi: debvcsbrowse.
+
 2009-06-28  Ian Beckwith  <ianb@erislabs.net>
 
 	* Bump version to 2.2.6.
